# tsv-reader

./: Cargo.toml  README.md
example-no-std/: Cargo.toml  build.rs  generate.py
example-no-std/src/: main.rs
example-tsv-reader/: Cargo.toml  generate.py
example-tsv-reader/src/: main.rs
src/: err.rs  lib.rs  prim.rs  reader.rs
tsv-reader-derive/: Cargo.toml
tsv-reader-derive/src/: lib.rs
