[package]
name = "tsv-reader"
version = "0.1.0"
edition = "2021"
rust-version = "1.61.0"

[workspace]

resolver = "2"

members = [
    "tsv-reader-derive",
    "example-no-std",
]

[features]
default = ["std", "derive"]
derive = ["dep:tsv-reader-derive"]
std = []

[dependencies]
tsv-reader-derive = { path = "tsv-reader-derive", optional = true }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
